# messager-dwh-vertica

./: .gitignore  docker-compose.yaml  pyproject.toml
pkg/: errors.py  main.py  utils.py
sql/: dds-ddl.sql  groups.sql  stg-ddl.sql  users.sql
